fixed scrollbar

--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -134,7 +134,7 @@
     border-radius: 0px;
 }
 ::-webkit-scrollbar-thumb {
-    background: red;
+    background: rgba(204, 204, 204, 0);
     border-radius: 0px;
 }
 @media only screen and (min-width: 600px) {
